# webservise

./: CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  PCHSupport.cmake
demo/: ReadMe.txt  test4.json
input/: test3.xml
modules/WebService/: CMakeLists.txt
modules/WebService/include/: Log.h  WebMonitor.h  targetver.h
modules/WebService/src/: Log.cpp  WebMonitor.cpp  main.cpp  pch.h
scripts/: clean.cmd  cmakegen-vc14-x64.cmd  cmakegen-vc14-x86.cmd
tests/: CMakeLists.txt
tests/src/: main.cpp  pch.h
